k8s/service.yaml
# Copyright (c) 2026 Huawei Technologies Co., Ltd.
# All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  name: orchestration-center
  namespace: orchestration-center
  labels:
    app: orchestration-center
spec:
  type: ClusterIP
  selector:
    app: orchestration-center
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
